--- a/react-pizza-v2/src/scss/components/_header.scss
+++ b/react-pizza-v2/src/scss/components/_header.scss
@@ -17,6 +17,7 @@
       margin-right: 15px;
     }
 
+
     h1 {
       color: #181818;
       font-size: 24px;
@@ -29,4 +30,38 @@
       color: #7b7b7b;
     }
   }
+}
+
+@media (max-width: 660px) {
+    .header {
+        padding: 20px 0;
+        &__logo {
+            flex-direction: column;
+            align-items: center;
+            margin-bottom: 24px;
+
+            img {
+                width: 64px;
+                height: 64px;
+                margin: 24px;
+            }
+        }
+        
+        h1 {
+            font-size: 18px;
+        }
+
+        p {
+            font-size: 14px;
+        }
+
+
+        h1, p {
+            text-align: center;
+        }
+
+        .container {
+            flex-direction: column;
+        }
+    }
 }
