--- a/react-pizza-v2/src/scss/components/_pizza-block.scss
+++ b/react-pizza-v2/src/scss/components/_pizza-block.scss
@@ -3,11 +3,6 @@
 .pizza-block {
   width: 280px;
   text-align: center;
-  margin-bottom: 65px;
-
-  &:not(:nth-of-type(4n)) {
-    margin-right: 35px;
-  }
 
   &__image {
     width: 260px;
@@ -70,4 +65,20 @@
     line-height: 27px;
     letter-spacing: 0.015em;
   }
+}
+
+@media (max-width: 660px) {
+ .pizza-block {
+    &__image {
+        width: 200px;
+    }
+
+    &__title {
+        font-size: 18px;
+    }
+
+    &__price {
+        font-size: 18px;
+    }
+ }   
 }
