search elem, useDebounce on input

--- a/react-pizza-v2/src/scss/components/_categories.scss
+++ b/react-pizza-v2/src/scss/components/_categories.scss
@@ -11,18 +11,21 @@
       border-radius: 30px;
       font-weight: bold;
       cursor: pointer;
-      transition: background-color 0.1s ease-in-out;
+      transition: background-color .3s ease-in-out;
       @include noselect();
 
       &:hover {
+        transition: background-color .3s ease-in-out;
         background-color: darken(#f9f9f9, 2%);
       }
 
       &:active {
+        transition: background-color .3s ease-in-out;
         background-color: darken(#f9f9f9, 5%);
       }
 
       &.active {
+        transition: background-color .3s ease-in-out;
         background-color: #282828;
         color: #fff;
       }
