--- a/react-pizza-v2/src/scss/app.scss
+++ b/react-pizza-v2/src/scss/app.scss
@@ -6,6 +6,26 @@ body {
   background-color: $background;
 }
 
+.flex {
+    display: flex;
+    &.inline { 
+        align-items: center;
+    }
+    &.block { 
+        flex-direction: block;
+    }
+    &.to-right { 
+        justify-content: flex-end;
+    }
+    &.to-left {
+        justify-content: flex-start;
+    }
+    &.gap-32 {
+        gap: 32px;
+    }
+
+}
+
 .wrapper {
   width: calc(100vw - 100px);
   height: 100%;
@@ -371,3 +391,4 @@ body {
         }
     }
 }
+
