--- a/react-pizza-v2/src/scss/components/_header.scss
+++ b/react-pizza-v2/src/scss/components/_header.scss
@@ -4,6 +4,40 @@
   border-bottom: 1px solid $gray-line;
   padding: 40px 0;
 
+  & .search {
+    position: relative;
+    & .icon.close {
+        position: absolute;
+        top: 11px;
+        right: 15px;
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        & path {
+            fill: #7b7b7b;
+        }
+    }
+    & input {
+        border: 1px solid rgba(0, 0, 0, .2);
+        background-color: white;
+        padding: 10px 30px 10px 45px;
+        border-radius: 15px;
+        font-size: 16px;
+        transition: border .3s ease-in-out;
+        background: url(../../assets/icons/search.svg) no-repeat; 
+        background-size: 25px 25px;
+        background-position: 7px 7px;
+        
+
+        &:hover, &:focus {
+            transition: border .3s ease-in-out;
+            border: 1px solid $orange;
+        }
+
+
+    }
+  }
+
   .container {
     display: flex;
     align-items: center;
@@ -63,5 +97,7 @@
         .container {
             flex-direction: column;
         }
+
+    
     }
 }
