--- a/react-pizza-v2/src/scss/components/_sort.scss
+++ b/react-pizza-v2/src/scss/components/_sort.scss
@@ -5,7 +5,7 @@
   &__label {
     display: flex;
     align-items: center;
-
+    cursor: pointer;
     svg {
       margin-right: 8px;
       transition: transform 300ms ease-in-out;
