--- a/react-pizza-v2/src/scss/app.scss
+++ b/react-pizza-v2/src/scss/app.scss
@@ -11,6 +11,22 @@ body {
   background-color: $background;
 }
 
+.text-center {
+    text-align: center;
+}
+
+.gap-8 {
+    gap: 8px;
+}
+
+.gap-16 {
+    gap: 16px;
+}
+
+.gap-32 {
+    gap: 32px;
+}
+
 .flex {
     display: flex;
     &.inline { 
@@ -63,8 +79,6 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
-
   }
 }
 
@@ -405,9 +419,9 @@ body {
 }
 
 .overlay {
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
+    position: fixed;
+    width: 100%;
+    height: 100%;
     left: 0;
     top: 0;
     z-index: 2;
@@ -419,7 +433,8 @@ body {
         top: 50%;
         transform: translate(-50%, -50%);
         background-color: #fff;
-        border: 1px solid var(--background);
-        border-radius: 20px;
+        border: 3px solid var(--background);
+        border-radius: 10px;
+        padding: 20px 40px;
     }
 }
