--- a/react-pizza-v2/src/scss/components/_button.scss
+++ b/react-pizza-v2/src/scss/components/_button.scss
@@ -1,7 +1,6 @@
 @import '../variables';
 
 .button {
-  display: inline-block;
   background-color: $orange;
   border-radius: 30px;
   padding: 10px 20px;
@@ -10,6 +9,9 @@
   cursor: pointer;
   transition: background-color $duration ease-in-out, border-color $duration ease-in-out;
   border: 1px solid transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   @include noselect();
 
   &,
@@ -103,6 +105,7 @@
     span {
       font-weight: 600;
       font-size: 16px;
+      padding: 0 3px;
     }
 
     &:hover {
@@ -124,7 +127,6 @@
       font-size: 13px;
       line-height: 22px;
       position: relative;
-      top: -1px;
       left: 3px;
     }
   }
