--- a/react-pizza-v2/src/scss/components/_button.scss
+++ b/react-pizza-v2/src/scss/components/_button.scss
@@ -19,6 +19,10 @@
     color: #fff;
   }
 
+  &:disabled {
+    cursor: default;
+  }
+
   i,
   span,
   path,
@@ -26,11 +30,11 @@
     transition: all $duration ease-in-out;
   }
 
-  &:hover {
+  &:hover:not(:disabled) {
     background-color: darken($orange, 8%);
   }
 
-  &:active {
+  &:active:not(:disabled) {
     background-color: darken($orange, 12%);
     transform: translateY(1px);
   }
@@ -44,6 +48,14 @@
     min-width: 32px;
     padding: 0;
     border-width: 2px;
+
+    &:disabled {
+        border-color: #ccc;
+
+        & svg path {
+            fill: #ccc;
+        }
+    }
   }
 
   &--black {
@@ -69,7 +81,7 @@
       }
     }
 
-    &:hover {
+    &:hover:not(:disabled) {
       background-color: $orange;
 
       &,
@@ -84,7 +96,7 @@
       }
     }
 
-    &:active {
+    &:active:not(:disabled) {
       background-color: darken($orange, 8%);
     }
   }
@@ -146,6 +158,8 @@
       font-weight: 600;
       font-size: 16px;
     }
+
+ 
   }
 }
 
