--- a/react-pizza-v2/src/scss/app.scss
+++ b/react-pizza-v2/src/scss/app.scss
@@ -33,7 +33,7 @@ body {
         align-items: center;
     }
     &.block { 
-        flex-direction: block;
+        flex-direction: column;
     }
     &.to-right { 
         justify-content: flex-end;
@@ -44,18 +44,16 @@ body {
     &.gap-32 {
         gap: 32px;
     }
-
 }
 
 .wrapper {
-  width: calc(100vw - 100px);
+  width: 100vw;
   height: 100%;
   background-color: #fff;
   margin: 50px auto;
   border-radius: 10px;
-  max-width: 1400px;
+  max-width: 1500px;
 }
-
 
 .content {
   padding: 40px 0;
@@ -69,9 +67,9 @@ body {
     // flex-wrap: wrap;
     // justify-content: space-between;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-gap: 48px 48px;
+    grid-gap: 64px 32px;
     place-items: center;
   }
 
